# sozluk

./: Cargo.toml  README.md
src/: colored_print.rs  dictionary.rs  index_size.rs  lib.rs  main.rs  matcher.rs  morpher.rs  output.rs  performance_log.rs  server.rs  settings.rs
