[package]
name = "sozluk"
version = "0.1.0"
authors = ["mustafa-001 <mustafaalimutlu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.4"
regex = "1.3.9"
tempfile = "3.1.0"
levenshtein = "1.0.4"
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.57"
rayon = "1.4.0"
# time = { version = "0.2", features = ["serde"] }
rand = "0.7.3"
chrono = { version = "0.4.18", features = ["serde"] }
termcolor = "1.1.0"
simplelog = "0.8.0"
log = "0.4.11"
tiny_http = "0.7.0"
lazy_static = "1.4.0"
strsim = "0.10.0"
ctrlc = "3.1.6"
bincode = "1.3.1"
structopt = "0.3.18"
smartstring ={ version  = "0.2.5", features = ["serde"] }
criterion = "0.3.3"

[profile.release]
lto = true
codegen-units = 1
